# ecc-dreamplace

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  README_AutoDMP.md  README_DREAMPlace.md  generate_gif.py  pyproject.toml
.github/: cliff.toml
.github/actions/build-wheel/: action.yml
.github/workflows/: auto-tag.yml  ci.yml  release.yml
bazel/: BUILD.bazel  pkg_config.bzl
cmake/: TorchExtension.cmake
docs/: release.md
dreamplace/: BasicPlace.py  EvalMetrics.py  NesterovAcceleratedGradientOptimizer.py  NonLinearPlace.py  Params.py  PlaceDB.py  PlaceObj.py  Placer.py  Timer.py  configure.py  macroPlaceDB.py  params.json  params2.json
dreamplace/ops/: CMakeLists.txt
dreamplace/ops/abacus_legalize/src/: abacus_legalize_cpu.h
dreamplace/ops/adjust_node_area/: adjust_node_area.py
dreamplace/ops/density_map/: density_map.py
dreamplace/ops/density_potential/: density_potential.py
dreamplace/ops/draw_place/: CMakeLists.txt  draw_place.py
dreamplace/ops/draw_place/src/: PlaceDrawer.h
dreamplace/ops/electric_potential/: electric_overflow.py  electric_potential.py
dreamplace/ops/greedy_legalize/src/: bin_assignment_cpu.h  legalize_bin_cpu.cpp
dreamplace/ops/irt_egr/: CMakeLists.txt  irt_egr.py
dreamplace/ops/legality_check/src/: legality_check.h
dreamplace/ops/macro_overlap/: CMakeLists.txt  macro_overlap.py
dreamplace/ops/nctugr_binary/: nctugr_binary.py
dreamplace/ops/rc_timing/: CMakeLists.txt  __init__.py  rc_timing.py  setup.py
dreamplace/ops/rc_timing/src/: beta_op.cpp  binds.cpp  delay_op.cpp  ldelay_op.cpp  load_op.cpp  rc_timing.cpp  rc_timing.hh
dreamplace/ops/rudy/: rudy_macros.py
dreamplace/ops/steiner_topo/: CMakeLists.txt  steiner_topo.py
dreamplace/ops/steiner_topo/src/: directional_ufs.h  steiner_topo.cpp
dreamplace/ops/timing_propagation/: CMakeLists.txt  test_propagation.ipynb  timing_propagation.py  unittest_propagation.py
dreamplace/ops/utility/src/: utils_cub.cuh
hpbandster/core/: dispatcher.py  worker.py
scripts/: build-dreamplace-wheel.sh
tuner/: configspace.json  run_tuner.sh  tuner_configs.py  tuner_train.py  tuner_worker.py
