module(
    name = "ecc-dreamplace",
    # Must match pyproject.toml version (read by auto-tag workflow).
    # Update both together when bumping versions.
    version = "0.1.0-alpha.1",
)

bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

bazel_dep(name = "ecos-bazel")
git_override(
    module_name = "ecos-bazel",
    remote = "https://github.com/Emin017/ecos-bazel",
    commit = "1f223bae8abeed392c72162cd5e98ecbd4f13b9c",
)

# Hermetic Python 3.11 toolchain
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")
use_repo(python, "python_3_11")

# Generate requirements_lock.txt from uv.lock at repo phase
uv_export = use_repo_rule("@ecos-bazel//rules:uv_export.bzl", "uv_export")
uv_export(
    name = "uv_requirements",
    uv_lock = "//:uv.lock",
)

# pip dependencies (torch, numpy, etc.) resolved from uv_export output
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "dreamplace_pypi",
    python_version = "3.11",
    requirements_lock = "@uv_requirements//:requirements_lock.txt",
    extra_pip_args = ["--extra-index-url=https://download.pytorch.org/whl/cpu"],
)
use_repo(pip, "dreamplace_pypi")

# System pkg-config paths for cmake() to find boost, cairo, zlib, etc.
pkg_config = use_extension("//bazel:pkg_config.bzl", "pkg_config")
use_repo(pkg_config, "pkg_config_path")
