[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamplace"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.4",
  "cairocffi>=0.9.0",
  "pkgconfig>=1.4.0",
  "setuptools>=39.1.0",
  "scipy>=1.7",
  "numpy>=1.21",
  "torch>=1.6.0",
  "shapely>=1.7.0",
  "pygmo>=2.16.1",
  "pyDOE2>=1.3.0",
  "shap>=0.45.0",
  "Pyro4>=4.82",
  "ConfigSpace>=0.6.0",
  "statsmodels>=0.13.2",
  "xgboost>=1.5.1",
  "pyunpack>=0.1.2",
  "patool>=1.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dreamplace*"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
  \.git
| \.venv
| build
| dist
)/
'''
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
# known_first_party = "your_package_name"
